Add UI improvements and mark-as-read functionality
- Increase grid cell size from 10px to 14px
- Add version tag (v0.1.0) in sidebar
- Make tagline smaller with reduced line height
- Open links in default browser via Tauri shell plugin
- Later and Ignore buttons now toggle each other (mutually exclusive)
- Ignored conversations show collapsed single-line view
- Preserve scroll position when toggling Later/Ignore
- Re-layout masonry when textarea expands
- Add Read button to mark conversations as read
- Auto-mark conversations as read after sending
- Clean build in build.sh (removes target/release/bundle)

--- a/oxidized/Cargo.toml
+++ b/oxidized/Cargo.toml
@@ -21,6 +21,7 @@ serde_json = "1.0"
 thiserror = "2.0"
 dirs = "6.0"
 tauri = { version = "2", features = [] }
+tauri-plugin-shell = "2"
 
 [dev-dependencies]
 tempfile = "3.15"
